# Lightest

./: .gitignore  checkformat.sh  format.sh
include/lightest/: arg_config_ext.h  lightest.h
test/: CMakeLists.txt  test_failing_more.cpp  test_failing_one.cpp  test_success.cpp
